--- a/translations/ghost+intl-icu.fr.xlf
+++ b/translations/ghost+intl-icu.fr.xlf
@@ -100,7 +100,7 @@
         <target>Rejoindre</target>
       </segment>
     </unit>
-    <unit id="1Wm5ylA">
+    <unit id="CwvX2yq">
       <notes>
         <note category="german">Die Sprache der gewählten Stadt ist {lang_town}. Deine aktuelle Spracheinstellung ist {lang_user}.</note>
       </notes>
@@ -127,7 +127,7 @@
         <target>Confirmer</target>
       </segment>
     </unit>
-    <unit id="Ap6glg5">
+    <unit id="x8NF3LC">
       <notes>
         <note category="german">Möchtest du die schreckliche Welt der Verdammten als Bürger der Stadt {town_name} betreten?</note>
       </notes>
