--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -199,7 +199,7 @@
         <target>The Crow</target>
       </segment>
     </unit>
-    <unit id="81dFh4o" name="Seite {page}/{pages}">
+    <unit id="EmHHbla" name="Seite {page}/{pages}">
       <notes>
         <note category="german">Seite {page}/{pages}</note>
       </notes>
@@ -469,7 +469,7 @@
         <target>Statistics</target>
       </segment>
     </unit>
-    <unit id="9jh.PAO" name="{points} Punkte">
+    <unit id="HPrVKwR" name="{points} Punkte">
       <notes>
         <note category="german">{points} Punkte</note>
       </notes>
@@ -568,7 +568,7 @@
         <target>even if they ask you nicely!</target>
       </segment>
     </unit>
-    <unit id="gjZ3uMC" name="Wenn du Fragen oder Probleme mit der Seite hast, kontaktiere bitte {contact}.">
+    <unit id="LZ2pK11" name="Wenn du Fragen oder Probleme mit der Seite hast, kontaktiere bitte {contact}.">
       <notes>
         <note category="german">Wenn du Fragen oder Probleme mit der Seite hast, kontaktiere bitte {contact}.</note>
       </notes>
@@ -1108,7 +1108,7 @@
         <target>Oracle Announcement</target>
       </segment>
     </unit>
-    <unit id="8_r8k2t" name="Dieses Thema enthält {count} offizielle Ansage(n) der MyHordes-Administratoren:">
+    <unit id="_7Y8RSv" name="Dieses Thema enthält {count} offizielle Ansage(n) der MyHordes-Administratoren:">
       <notes>
         <note category="german">Dieses Thema enthält {count} offizielle Ansage(n) der MyHordes-Administratoren:</note>
       </notes>
@@ -1117,7 +1117,7 @@
         <target>This thread contains {count} official announcement(s) from MyHordes Administrators :</target>
       </segment>
     </unit>
-    <unit id="GfGOj1g" name="Dieses Thema enthält {count} Ansage(n) von Community-Vertretern:">
+    <unit id="H4Fm1Ul" name="Dieses Thema enthält {count} Ansage(n) von Community-Vertretern:">
       <notes>
         <note category="german">Dieses Thema enthält {count} Ansage(n) von Community-Vertretern:</note>
       </notes>
@@ -1621,7 +1621,7 @@
         <target>At least one post on this Topic has been reported to the Moderators.</target>
       </segment>
     </unit>
-    <unit id="KV1uMW3" name="Dieses Thema enthält {count} gemeldete Posts:">
+    <unit id="gmSIxjG" name="Dieses Thema enthält {count} gemeldete Posts:">
       <notes>
         <note category="german">Dieses Thema enthält {count} gemeldete Posts:</note>
       </notes>
@@ -1630,7 +1630,7 @@
         <target>This Topic contains {count} reported posts:</target>
       </segment>
     </unit>
-    <unit id="XvJRBeq" name="{num} Meldungen. Klicken, um Benutzer anzuzeigen.">
+    <unit id="dzF2eHb" name="{num} Meldungen. Klicken, um Benutzer anzuzeigen.">
       <notes>
         <note category="german">{num} Meldungen. Klicken, um Benutzer anzuzeigen.</note>
       </notes>
@@ -1639,7 +1639,7 @@
         <target>{num} Messages. Click to view users.</target>
       </segment>
     </unit>
-    <unit id="uVEhYFM" name="Gelöscht von {user} ({time}). Klicken, um den Grund einzublenden.">
+    <unit id="m3AbtBp" name="Gelöscht von {user} ({time}). Klicken, um den Grund einzublenden.">
       <notes>
         <note category="german">Gelöscht von {user} ({time}). Klicken, um den Grund einzublenden.</note>
       </notes>
@@ -2003,7 +2003,7 @@
         <target>Permanent</target>
       </segment>
     </unit>
-    <unit id="6Ql8d6C" name="{n} Tage">
+    <unit id="Hwdoi.l" name="{n} Tage">
       <notes>
         <note category="german">{n} Tage</note>
       </notes>
@@ -2021,7 +2021,7 @@
         <target>1 Day</target>
       </segment>
     </unit>
-    <unit id="j5aKYuL" name="{n} Stunden">
+    <unit id="jLGnWab" name="{n} Stunden">
       <notes>
         <note category="german">{n} Stunden</note>
       </notes>
@@ -2039,7 +2039,7 @@
         <target>1 Hour</target>
       </segment>
     </unit>
-    <unit id="p._haUN" name="{n} Minuten">
+    <unit id="EJ4TXc1" name="{n} Minuten">
       <notes>
         <note category="german">{n} Minuten</note>
       </notes>
@@ -2057,7 +2057,7 @@
         <target>1 Minute</target>
       </segment>
     </unit>
-    <unit id="kk4m10D" name="{n} Sekunden">
+    <unit id="OTEy7hr" name="{n} Sekunden">
       <notes>
         <note category="german">{n} Sekunden</note>
       </notes>
@@ -2300,7 +2300,7 @@
         <target>Announcement</target>
       </segment>
     </unit>
-    <unit id="2vjDBX2" name="{n} Teilnehmer">
+    <unit id="UnTLN.t" name="{n} Teilnehmer">
       <notes>
         <note category="german">{n} Teilnehmer</note>
       </notes>
@@ -2354,7 +2354,7 @@
         <target>Yesterday</target>
       </segment>
     </unit>
-    <unit id="_KsSa.z" name="Neuer Beitrag in {topic}">
+    <unit id="BXmgyWZ" name="Neuer Beitrag in {topic}">
       <notes>
         <note category="german">Neuer Beitrag in {topic}</note>
       </notes>
@@ -2699,7 +2699,7 @@
         <target>Avatar</target>
       </segment>
     </unit>
-    <unit id="hDhyhlE" name="Gruppe aus {num} Spielern">
+    <unit id="zpoaxbk" name="Gruppe aus {num} Spielern">
       <notes>
         <note category="german">Gruppe aus {num} Spielern</note>
       </notes>
@@ -2744,7 +2744,7 @@
         <target>Eine offizielle Gruppe kontaktieren</target>
       </segment>
     </unit>
-    <unit id="kjByjoe" name="via {group_inbox}">
+    <unit id="jQrj982" name="via {group_inbox}">
       <notes>
         <note category="german">via {group_inbox}</note>
       </notes>
@@ -2816,7 +2816,7 @@
         <target>Show</target>
       </segment>
     </unit>
-    <unit id="fufp5fd" name="Ausgeblendete Nachricht von {user}. Klicken, um anzuzeigen.">
+    <unit id="v8YzpLG" name="Ausgeblendete Nachricht von {user}. Klicken, um anzuzeigen.">
       <notes>
         <note category="german">Ausgeblendete Nachricht von {user}. Klicken, um anzuzeigen.</note>
       </notes>
@@ -2825,7 +2825,7 @@
         <target>Hidden message from {user}. Click to show.</target>
       </segment>
     </unit>
-    <unit id="iZZF_a6">
+    <unit id="YNxQwvO">
       <notes>
         <note category="german">{user} hat dich geblockt und wurde daher aus der Liste der Empfänger für diese Nachricht gestrichen.</note>
       </notes>
@@ -2834,7 +2834,7 @@
         <target>{user} user has blocked you and has therefore been removed from the list of recipients for this message.</target>
       </segment>
     </unit>
-    <unit id="eEWrS7n" name="{users} und {last_user}">
+    <unit id="QZZefQX" name="{users} und {last_user}">
       <notes>
         <note category="german">{users} und {last_user}</note>
       </notes>
@@ -2843,7 +2843,7 @@
         <target>{users} and {last_user}</target>
       </segment>
     </unit>
-    <unit id="9JfHrKu">
+    <unit id="yJCPgfF">
       <notes>
         <note category="german">{users} haben dich geblockt und wurden daher aus der Liste der Empfänger für diese Nachricht gestrichen.</note>
       </notes>
@@ -2870,7 +2870,7 @@
         <target>This user has been removed from your blacklist.</target>
       </segment>
     </unit>
-    <unit id="lYFv71g" name="Du hast {user} blockiert.">
+    <unit id="d1jQbJk" name="Du hast {user} blockiert.">
       <notes>
         <note category="german">Du hast {user} blockiert.</note>
       </notes>
@@ -2897,7 +2897,7 @@
         <target>Block player</target>
       </segment>
     </unit>
-    <unit id="Ki.EhtV" name="{user} blockieren">
+    <unit id="iu5_LY8" name="{user} blockieren">
       <notes>
         <note category="german">{user} blockieren</note>
       </notes>
