--- a/translations/mail+intl-icu.de.xlf
+++ b/translations/mail+intl-icu.de.xlf
@@ -19,7 +19,7 @@
         <target>Passwort zurücksetzen</target>
       </segment>
     </unit>
-    <unit id="Yf9Z7KC" name="Hallo {user}! Willkommen bei MyHordes!">
+    <unit id="Tg55FPj" name="Hallo {user}! Willkommen bei MyHordes!">
       <notes>
         <note category="german">Hallo {user}! Willkommen bei MyHordes!</note>
       </notes>
@@ -49,7 +49,7 @@
         Wenn du dich nicht bei MyHordes registriert hast, ignoriere diese Nachricht.</target>
       </segment>
     </unit>
-    <unit id="DKEI.Ty" name="Hallo {user}!">
+    <unit id="Y9f6YEq" name="Hallo {user}!">
       <notes>
         <note category="german">Hallo {user}!</note>
       </notes>
