--- a/translations/season+intl-icu.fr.xlf
+++ b/translations/season+intl-icu.fr.xlf
@@ -100,7 +100,7 @@
         <target>Saison 0.0</target>
       </segment>
     </unit>
-    <unit id="KOA0ZKt" name="Saison {number}.{subnumber}">
+    <unit id="IkgbXUH" name="Saison {number}.{subnumber}">
       <notes>
         <note category="german">Saison {number}.{subnumber}</note>
       </notes>
