--- a/translations/welcome+intl-icu.de.xlf
+++ b/translations/welcome+intl-icu.de.xlf
@@ -100,7 +100,7 @@
         <target>Abonnierte Themen</target>
       </segment>
     </unit>
-    <unit id="f63iKfV">
+    <unit id="P9PTDGu">
       <notes>
         <note category="german">MyHordes ist eine von der Community entwickelte offene Implementierung des Browser-Spiels "Die Verdammten" und seine anderen Versionen von {motiontwin}.</note>
       </notes>
@@ -118,7 +118,7 @@
         <target>Ziel des Projektes ist es, eine Version von "Die Verdammten" und seinen anderen Versionen zu erschaffen, die nicht nur nach der Flash-Abschaltung im Jahr 2020 funktionsfähig ist, sondern auch weiterentwickelt und mit neuen Inhalten versorgt werden kann.</target>
       </segment>
     </unit>
-    <unit id="GEQa89m">
+    <unit id="psTpKgc">
       <notes>
         <note category="german">Alle Grafiken stammen, wenn nicht ausdrücklich anders angegeben, ebenfalls aus "Die Verdammten" und seine anderen Versionen und sind damit Eigentum von {motiontwin}.</note>
       </notes>
