--- a/translations/welcome+intl-icu.en.xlf
+++ b/translations/welcome+intl-icu.en.xlf
@@ -100,7 +100,7 @@
         <target>Threads I'm following</target>
       </segment>
     </unit>
-    <unit id="f63iKfV">
+    <unit id="P9PTDGu">
       <notes>
         <note category="german">MyHordes ist eine von der Community entwickelte offene Implementierung des Browser-Spiels "Die Verdammten" und seine anderen Versionen von {motiontwin}.</note>
       </notes>
@@ -118,7 +118,7 @@
         <target>The aim of this project is to create a version of "Die2Nite" and its other versions, that will not only work after the removal of Flash support in common browsers, but will also be developed beyond the original and receive new content.</target>
       </segment>
     </unit>
-    <unit id="GEQa89m">
+    <unit id="psTpKgc">
       <notes>
         <note category="german">Alle Grafiken stammen, wenn nicht ausdrücklich anders angegeben, ebenfalls aus "Die Verdammten" und seine anderen Versionen und sind damit Eigentum von {motiontwin}.</note>
       </notes>
