--- a/translations/welcome+intl-icu.es.xlf
+++ b/translations/welcome+intl-icu.es.xlf
@@ -100,7 +100,7 @@
         <target>Temas suscritos</target>
       </segment>
     </unit>
-    <unit id="f63iKfV">
+    <unit id="P9PTDGu">
       <notes>
         <note category="german">MyHordes ist eine von der Community entwickelte offene Implementierung des Browser-Spiels "Die Verdammten" und seine anderen Versionen von {motiontwin}.</note>
       </notes>
@@ -118,7 +118,7 @@
         <target>El objetivo de este proyecto es crear una versión de "Zombinoia" y sus otras versiones que no solo funcione luego del cese de soporte de Flash Player para exploradores, sino que también siga siendo desarrollado y recibiendo nuevas actualizaciones.</target>
       </segment>
     </unit>
-    <unit id="GEQa89m">
+    <unit id="psTpKgc">
       <notes>
         <note category="german">Alle Grafiken stammen, wenn nicht ausdrücklich anders angegeben, ebenfalls aus "Die Verdammten" und seine anderen Versionen und sind damit Eigentum von {motiontwin}.</note>
       </notes>
