--- a/translations/welcome+intl-icu.fr.xlf
+++ b/translations/welcome+intl-icu.fr.xlf
@@ -100,7 +100,7 @@
         <target>Les sujets que je suis</target>
       </segment>
     </unit>
-    <unit id="f63iKfV">
+    <unit id="P9PTDGu">
       <notes>
         <note category="german">MyHordes ist eine von der Community entwickelte offene Implementierung des Browser-Spiels "Die Verdammten" und seine anderen Versionen von {motiontwin}.</note>
       </notes>
@@ -118,7 +118,7 @@
         <target>Le but de ce projet est de créer une version de "Hordes.fr" et de ses autres versions qui soit fonctionnelle malgré l'arrêt de Flash en 2020, mais aussi de la faire évoluer avec du nouveau contenu.</target>
       </segment>
     </unit>
-    <unit id="GEQa89m">
+    <unit id="psTpKgc">
       <notes>
         <note category="german">Alle Grafiken stammen, wenn nicht ausdrücklich anders angegeben, ebenfalls aus "Die Verdammten" und seine anderen Versionen und sind damit Eigentum von {motiontwin}.</note>
       </notes>
