--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -946,7 +946,7 @@
         <target>Ataques planeados</target>
       </segment>
     </unit>
-    <unit id="5HWWJl3" name="Überfällig seit {s} Sekunden!">
+    <unit id="UzWLhrt" name="Überfällig seit {s} Sekunden!">
       <notes>
         <note category="german">Überfällig seit {s} Sekunden!</note>
       </notes>
@@ -1216,7 +1216,7 @@
         <target>Permisos</target>
       </segment>
     </unit>
-    <unit id="E4Jlo35" name="Gewähren: {role}">
+    <unit id="ZFErHHS" name="Gewähren: {role}">
       <notes>
         <note category="german">Gewähren: {role}</note>
       </notes>
@@ -1279,7 +1279,7 @@
         <target>Ban</target>
       </segment>
     </unit>
-    <unit id="mXRxJwB" name="Durch {admin} vom Spiel ausgeschlossen!">
+    <unit id="oTFpWe9" name="Durch {admin} vom Spiel ausgeschlossen!">
       <notes>
         <note category="german">Durch {admin} vom Spiel ausgeschlossen!</note>
       </notes>
@@ -1477,7 +1477,7 @@
         <target>Nombre de Muestra</target>
       </segment>
     </unit>
-    <unit id="14HKU3b" name="Lokal: {account}">
+    <unit id="kaV8fJ." name="Lokal: {account}">
       <notes>
         <note category="german">Lokal: {account}</note>
       </notes>
@@ -1549,7 +1549,7 @@
         <target>Cuenta marcada para eliminiación!</target>
       </segment>
     </unit>
-    <unit id="_Ywx.pH" name="Anzahl der gelisteten Domains: {number}">
+    <unit id="Z3wFfH_" name="Anzahl der gelisteten Domains: {number}">
       <notes>
         <note category="german">Anzahl der gelisteten Domains: {number}</note>
       </notes>
@@ -1639,7 +1639,7 @@
         <target>Tablero</target>
       </segment>
     </unit>
-    <unit id="KVK60jg" name="Stadt {townname}">
+    <unit id="CgPo05m" name="Stadt {townname}">
       <notes>
         <note category="german">Stadt {townname}</note>
       </notes>
@@ -1990,7 +1990,7 @@
         <target>Importar</target>
       </segment>
     </unit>
-    <unit id="GsetYdP" name="Seite {page}/{total}">
+    <unit id="Z5HXK7D" name="Seite {page}/{total}">
       <notes>
         <note category="german">Seite {page}/{total}</note>
       </notes>
@@ -2017,9 +2017,9 @@
         <target>Registrar nueva solicitud</target>
       </segment>
     </unit>
-    <unit id="SisP.gu" name="Änderungen an '{appname}' speichern">
+    <unit id="MxCYTlN" name="Änderungen an '{appname}' speichern">
       <notes>
-        <note category="german">Änderungen an '{appname}' speichern</note>
+        <note category="german">Änderungen an {appname} speichern</note>
       </notes>
       <segment>
         <source>Änderungen an '{appname}' speichern</source>
@@ -2035,7 +2035,7 @@
         <target>Mostrar</target>
       </segment>
     </unit>
-    <unit id=".iE.xsh" name="Gegen {culprit}">
+    <unit id="t.MMG.6" name="Gegen {culprit}">
       <notes>
         <note category="german">Gegen {culprit}</note>
       </notes>
@@ -2062,7 +2062,7 @@
         <target>Nueva solicitud</target>
       </segment>
     </unit>
-    <unit id="GOi00pr" name="Anwendung &quot;{external_app}&quot;">
+    <unit id="MBDZMn9" name="Anwendung &quot;{external_app}&quot;">
       <notes>
         <note category="german">Anwendung "{external_app}"</note>
       </notes>
@@ -2242,7 +2242,7 @@
         <target>Nombre</target>
       </segment>
     </unit>
-    <unit id="W_0lUFE" name="Saison &quot;{season}&quot;">
+    <unit id="GCGUxtQ" name="Saison &quot;{season}&quot;">
       <notes>
         <note category="german">Saison "{season}"</note>
       </notes>
@@ -2359,7 +2359,7 @@
         <target>Votos</target>
       </segment>
     </unit>
-    <unit id="cLQ9dCO" name="Für {target}">
+    <unit id="JCkhvqs" name="Für {target}">
       <notes>
         <note category="german">Für {target}</note>
       </notes>
@@ -2548,7 +2548,7 @@
         <target>Confirmar</target>
       </segment>
     </unit>
-    <unit id="ymT9mze" name="{d} Tage">
+    <unit id="JUr1eVI" name="{d} Tage">
       <notes>
         <note category="german">{d} Tage</note>
       </notes>
@@ -3286,7 +3286,7 @@
         <target>Nuevo grupo</target>
       </segment>
     </unit>
-    <unit id="BbvwyR3" name="Gruppe &quot;{group}&quot;">
+    <unit id="P5wAMly" name="Gruppe &quot;{group}&quot;">
       <notes>
         <note category="german">Gruppe "{group}"</note>
       </notes>
