--- a/translations/login+intl-icu.de.xlf
+++ b/translations/login+intl-icu.de.xlf
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="de" trgLang="de">
   <file id="login.de">
-    <unit id="KHtB91o" name="Dein Name muss mindestens {{ limit }} Zeichen umfassen.">
+    <unit id="crJFns0" name="Dein Name muss mindestens { limit } Zeichen umfassen.">
       <notes>
-        <note category="german">Dein Name muss mindestens {{ limit }} Zeichen umfassen.</note>
+        <note category="german">Dein Name muss mindestens {limit} Zeichen umfassen.</note>
       </notes>
       <segment>
-        <source>Dein Name muss mindestens {{ limit }} Zeichen umfassen.</source>
-        <target>Dein Name muss mindestens {{ limit }} Zeichen umfassen.</target>
+        <source>Dein Name muss mindestens { limit } Zeichen umfassen.</source>
+        <target>Dein Name muss mindestens { limit } Zeichen umfassen.</target>
       </segment>
     </unit>
-    <unit id="ouF_pon" name="Dein Name kann höchstens {{ limit }} Zeichen umfassen.">
+    <unit id="VAaM7eo" name="Dein Name kann höchstens { limit } Zeichen umfassen.">
       <notes>
-        <note category="german">Dein Name kann höchstens {{ limit }} Zeichen umfassen.</note>
+        <note category="german">Dein Name kann höchstens {limit} Zeichen umfassen.</note>
       </notes>
       <segment>
-        <source>Dein Name kann höchstens {{ limit }} Zeichen umfassen.</source>
-        <target>Dein Name kann höchstens {{ limit }} Zeichen umfassen.</target>
+        <source>Dein Name kann höchstens { limit } Zeichen umfassen.</source>
+        <target>Dein Name kann höchstens { limit } Zeichen umfassen.</target>
       </segment>
     </unit>
     <unit id="WvW8_JI" name="Die eingegebene E-Mail Adresse ist nicht gültig.">
@@ -37,13 +37,13 @@
         <target>Die eingegebenen E-Mail Adressen stimmen nicht überein.</target>
       </segment>
     </unit>
-    <unit id="AHjj6mV" name="Dein Passwort muss mindestens {{ limit }} Zeichen umfassen.">
+    <unit id="jz03..f" name="Dein Passwort muss mindestens { limit } Zeichen umfassen.">
       <notes>
-        <note category="german">Dein Passwort muss mindestens {{ limit }} Zeichen umfassen.</note>
+        <note category="german">Dein Passwort muss mindestens {limit} Zeichen umfassen.</note>
       </notes>
       <segment>
-        <source>Dein Passwort muss mindestens {{ limit }} Zeichen umfassen.</source>
-        <target>Dein Passwort muss mindestens {{ limit }} Zeichen umfassen.</target>
+        <source>Dein Passwort muss mindestens { limit } Zeichen umfassen.</source>
+        <target>Dein Passwort muss mindestens { limit } Zeichen umfassen.</target>
       </segment>
     </unit>
     <unit id="OK9eVbg" name="Die eingegebenen Passwörter stimmen nicht überein.">
@@ -55,13 +55,13 @@
         <target>Die eingegebenen Passwörter stimmen nicht überein.</target>
       </segment>
     </unit>
-    <unit id="a9.cyds" name="Der Validierungscode muss {{ limit }} Zeichen umfassen.">
+    <unit id="o5ZFZh6" name="Der Validierungscode muss { limit } Zeichen umfassen.">
       <notes>
-        <note category="german">Der Validierungscode muss {{ limit }} Zeichen umfassen.</note>
+        <note category="german">Der Validierungscode muss {limit} Zeichen umfassen.</note>
       </notes>
       <segment>
-        <source>Der Validierungscode muss {{ limit }} Zeichen umfassen.</source>
-        <target>Der Validierungscode muss {{ limit }} Zeichen umfassen.</target>
+        <source>Der Validierungscode muss { limit } Zeichen umfassen.</source>
+        <target>Der Validierungscode muss { limit } Zeichen umfassen.</target>
       </segment>
     </unit>
     <unit id="0f1ZNLd" name="Der angegebene Validierungscode ist nicht gültig.">
@@ -100,7 +100,7 @@
         <target>E-Mail Adresse validieren</target>
       </segment>
     </unit>
-    <unit id="TM0i7i7" name="Hallo {name}!">
+    <unit id="mGW7q29" name="Hallo {name}!">
       <notes>
         <note category="german">Hallo {name}!</note>
       </notes>
@@ -319,7 +319,7 @@
         <target>Dein Passwort wurde erfolgreich geändert. Bitte logge dich mit deinem neuen Passwort ein.</target>
       </segment>
     </unit>
-    <unit id="U4wx4AP">
+    <unit id="MO7x7sr">
       <notes>
         <note category="german">Auf wiedersehen, {name}. Wir werden dich vermissen und hoffen, dass du vielleicht doch noch einmal zurück kommst.</note>
       </notes>
@@ -541,7 +541,7 @@
         <target>Los geht's!</target>
       </segment>
     </unit>
-    <unit id="e0idyWf" name="Hallo {username}!">
+    <unit id="wMeOIH." name="Hallo {username}!">
       <notes>
         <note category="german">Hallo {username}!</note>
       </notes>
@@ -568,7 +568,7 @@
         <target>Du wirst eingeloggt. Bitte warte eine Sekunde ...</target>
       </segment>
     </unit>
-    <unit id="pEAthLZ">
+    <unit id="p_2G6pv">
       <notes>
         <note category="german">Vielen Dank, dass du deinen MyHordes-Account {namecheck_mh} mit deinem EternalTwin-Account {namecheck_et} verknüpfst!</note>
       </notes>
