--- a/translations/login+intl-icu.en.xlf
+++ b/translations/login+intl-icu.en.xlf
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="de" trgLang="en">
   <file id="login.en">
-    <unit id="KHtB91o" name="Dein Name muss mindestens {{ limit }} Zeichen umfassen.">
+    <unit id="crJFns0" name="Dein Name muss mindestens { limit } Zeichen umfassen.">
       <notes>
-        <note category="german">Dein Name muss mindestens {{ limit }} Zeichen umfassen.</note>
+        <note category="german">Dein Name muss mindestens {limit} Zeichen umfassen.</note>
       </notes>
       <segment>
-        <source>Dein Name muss mindestens {{ limit }} Zeichen umfassen.</source>
+        <source>Dein Name muss mindestens { limit } Zeichen umfassen.</source>
         <target>Your name must be at least { limit } characters long.</target>
       </segment>
     </unit>
-    <unit id="ouF_pon" name="Dein Name kann höchstens {{ limit }} Zeichen umfassen.">
+    <unit id="VAaM7eo" name="Dein Name kann höchstens { limit } Zeichen umfassen.">
       <notes>
-        <note category="german">Dein Name kann höchstens {{ limit }} Zeichen umfassen.</note>
+        <note category="german">Dein Name kann höchstens {limit} Zeichen umfassen.</note>
       </notes>
       <segment>
-        <source>Dein Name kann höchstens {{ limit }} Zeichen umfassen.</source>
+        <source>Dein Name kann höchstens { limit } Zeichen umfassen.</source>
         <target>Your name may only have { limit } characters at most.</target>
       </segment>
     </unit>
@@ -37,12 +37,12 @@
         <target>The entered e-mail addresses do not match.</target>
       </segment>
     </unit>
-    <unit id="AHjj6mV" name="Dein Passwort muss mindestens {{ limit }} Zeichen umfassen.">
+    <unit id="jz03..f" name="Dein Passwort muss mindestens { limit } Zeichen umfassen.">
       <notes>
-        <note category="german">Dein Passwort muss mindestens {{ limit }} Zeichen umfassen.</note>
+        <note category="german">Dein Passwort muss mindestens {limit} Zeichen umfassen.</note>
       </notes>
       <segment>
-        <source>Dein Passwort muss mindestens {{ limit }} Zeichen umfassen.</source>
+        <source>Dein Passwort muss mindestens { limit } Zeichen umfassen.</source>
         <target>Your password must be at least { limit } characters long.</target>
       </segment>
     </unit>
@@ -55,12 +55,12 @@
         <target>The entered passwords do not match.</target>
       </segment>
     </unit>
-    <unit id="a9.cyds" name="Der Validierungscode muss {{ limit }} Zeichen umfassen.">
+    <unit id="o5ZFZh6" name="Der Validierungscode muss { limit } Zeichen umfassen.">
       <notes>
-        <note category="german">Der Validierungscode muss {{ limit }} Zeichen umfassen.</note>
+        <note category="german">Der Validierungscode muss {limit} Zeichen umfassen.</note>
       </notes>
       <segment>
-        <source>Der Validierungscode muss {{ limit }} Zeichen umfassen.</source>
+        <source>Der Validierungscode muss { limit } Zeichen umfassen.</source>
         <target>The verification code must contain { limit } characters.</target>
       </segment>
     </unit>
@@ -100,7 +100,7 @@
         <target>Validate e-mail address</target>
       </segment>
     </unit>
-    <unit id="TM0i7i7" name="Hallo {name}!">
+    <unit id="mGW7q29" name="Hallo {name}!">
       <notes>
         <note category="german">Hallo {name}!</note>
       </notes>
@@ -319,7 +319,7 @@
         <target>Your password was successfully changed. Please login with your new password.</target>
       </segment>
     </unit>
-    <unit id="U4wx4AP">
+    <unit id="MO7x7sr">
       <notes>
         <note category="german">Auf wiedersehen, {name}. Wir werden dich vermissen und hoffen, dass du vielleicht doch noch einmal zurück kommst.</note>
       </notes>
@@ -540,7 +540,7 @@
         <target>Let's go!</target>
       </segment>
     </unit>
-    <unit id="e0idyWf" name="Hallo {username}!">
+    <unit id="wMeOIH." name="Hallo {username}!">
       <notes>
         <note category="german">Hallo {username}!</note>
       </notes>
@@ -567,7 +567,7 @@
         <target>You are being logged in. Please wait a second ...</target>
       </segment>
     </unit>
-    <unit id="pEAthLZ">
+    <unit id="p_2G6pv">
       <notes>
         <note category="german">Vielen Dank, dass du deinen MyHordes-Account {namecheck_mh} mit deinem EternalTwin-Account {namecheck_et} verknüpfst!</note>
       </notes>
