--- a/translations/login+intl-icu.fr.xlf
+++ b/translations/login+intl-icu.fr.xlf
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="de" trgLang="fr">
   <file id="login.fr">
-    <unit id="KHtB91o" name="Dein Name muss mindestens {{ limit }} Zeichen umfassen.">
+    <unit id="crJFns0" name="Dein Name muss mindestens { limit } Zeichen umfassen.">
       <notes>
-        <note category="german">Dein Name muss mindestens {{ limit }} Zeichen umfassen.</note>
+        <note category="german">Dein Name muss mindestens {limit} Zeichen umfassen.</note>
       </notes>
       <segment>
-        <source>Dein Name muss mindestens {{ limit }} Zeichen umfassen.</source>
+        <source>Dein Name muss mindestens { limit } Zeichen umfassen.</source>
         <target>Le pseudo doit contenir { limit } caractères au minimum.</target>
       </segment>
     </unit>
-    <unit id="ouF_pon" name="Dein Name kann höchstens {{ limit }} Zeichen umfassen.">
+    <unit id="VAaM7eo" name="Dein Name kann höchstens { limit } Zeichen umfassen.">
       <notes>
-        <note category="german">Dein Name kann höchstens {{ limit }} Zeichen umfassen.</note>
+        <note category="german">Dein Name kann höchstens {limit} Zeichen umfassen.</note>
       </notes>
       <segment>
-        <source>Dein Name kann höchstens {{ limit }} Zeichen umfassen.</source>
+        <source>Dein Name kann höchstens { limit } Zeichen umfassen.</source>
         <target>Le pseudo doit contenir { limit } caractères au maximum.</target>
       </segment>
     </unit>
@@ -37,12 +37,12 @@
         <target>L'adresse e-mail de vérification ne correspond pas à l'adresse e-mail.</target>
       </segment>
     </unit>
-    <unit id="AHjj6mV" name="Dein Passwort muss mindestens {{ limit }} Zeichen umfassen.">
+    <unit id="jz03..f" name="Dein Passwort muss mindestens { limit } Zeichen umfassen.">
       <notes>
-        <note category="german">Dein Passwort muss mindestens {{ limit }} Zeichen umfassen.</note>
+        <note category="german">Dein Passwort muss mindestens {limit} Zeichen umfassen.</note>
       </notes>
       <segment>
-        <source>Dein Passwort muss mindestens {{ limit }} Zeichen umfassen.</source>
+        <source>Dein Passwort muss mindestens { limit } Zeichen umfassen.</source>
         <target>Votre mot de passe doit contenir au moins { limit } caractères.</target>
       </segment>
     </unit>
@@ -55,12 +55,12 @@
         <target>Le mot de passe de confirmation ne correspond pas au mot de passe.</target>
       </segment>
     </unit>
-    <unit id="a9.cyds" name="Der Validierungscode muss {{ limit }} Zeichen umfassen.">
+    <unit id="o5ZFZh6" name="Der Validierungscode muss { limit } Zeichen umfassen.">
       <notes>
-        <note category="german">Der Validierungscode muss {{ limit }} Zeichen umfassen.</note>
+        <note category="german">Der Validierungscode muss {limit} Zeichen umfassen.</note>
       </notes>
       <segment>
-        <source>Der Validierungscode muss {{ limit }} Zeichen umfassen.</source>
+        <source>Der Validierungscode muss { limit } Zeichen umfassen.</source>
         <target>Le code de vérification est composé de { limit } caractères.</target>
       </segment>
     </unit>
@@ -100,7 +100,7 @@
         <target>Vérification de l'adresse e-mail</target>
       </segment>
     </unit>
-    <unit id="TM0i7i7" name="Hallo {name}!">
+    <unit id="mGW7q29" name="Hallo {name}!">
       <notes>
         <note category="german">Hallo {name}!</note>
       </notes>
@@ -309,7 +309,7 @@
         <target><![CDATA[Votre pseudo ne peut pas contenir d'espaces ou les symboles "$", "<" et ">".]]></target>
       </segment>
     </unit>
-    <unit id="U4wx4AP">
+    <unit id="MO7x7sr">
       <notes>
         <note category="german">Auf wiedersehen, {name}. Wir werden dich vermissen und hoffen, dass du vielleicht doch noch einmal zurück kommst.</note>
       </notes>
@@ -538,7 +538,7 @@
         <target>Et c'est parti !</target>
       </segment>
     </unit>
-    <unit id="e0idyWf" name="Hallo {username}!">
+    <unit id="wMeOIH." name="Hallo {username}!">
       <notes>
         <note category="german">Hallo {username}!</note>
       </notes>
@@ -565,7 +565,7 @@
         <target>Vous serez connecté. Veuillez patienter une seconde...</target>
       </segment>
     </unit>
-    <unit id="pEAthLZ">
+    <unit id="p_2G6pv">
       <notes>
         <note category="german">Vielen Dank, dass du deinen MyHordes-Account {namecheck_mh} mit deinem EternalTwin-Account {namecheck_et} verknüpfst!</note>
       </notes>
