--- a/translations/mail+intl-icu.es.xlf
+++ b/translations/mail+intl-icu.es.xlf
@@ -19,7 +19,7 @@
         <target>Restablecimiento de contraseña</target>
       </segment>
     </unit>
-    <unit id="Yf9Z7KC" name="Hallo {user}! Willkommen bei MyHordes!">
+    <unit id="Tg55FPj" name="Hallo {user}! Willkommen bei MyHordes!">
       <notes>
         <note category="german">Hallo {user}! Willkommen bei MyHordes!</note>
       </notes>
@@ -48,7 +48,7 @@
         <target>Recibió este correo electrónico porque usted (u otra persona) proporcionó su dirección de correo electrónico al registrarse. Si no se ha registrado en MyHordes, ignore este mensaje.</target>
       </segment>
     </unit>
-    <unit id="DKEI.Ty" name="Hallo {user}!">
+    <unit id="Y9f6YEq" name="Hallo {user}!">
       <notes>
         <note category="german">Hallo {user}!</note>
       </notes>
