--- a/translations/mail+intl-icu.fr.xlf
+++ b/translations/mail+intl-icu.fr.xlf
@@ -19,7 +19,7 @@
         <target>Réinitialiser le mot de passe</target>
       </segment>
     </unit>
-    <unit id="Yf9Z7KC" name="Hallo {user}! Willkommen bei MyHordes!">
+    <unit id="Tg55FPj" name="Hallo {user}! Willkommen bei MyHordes!">
       <notes>
         <note category="german">Hallo {user}! Willkommen bei MyHordes!</note>
       </notes>
@@ -49,7 +49,7 @@
         Si vous ne vous êtes pas inscrit sur MyHordes, ignorez ce message.</target>
       </segment>
     </unit>
-    <unit id="DKEI.Ty" name="Hallo {user}!">
+    <unit id="Y9f6YEq" name="Hallo {user}!">
       <notes>
         <note category="german">Hallo {user}!</note>
       </notes>
