--- a/translations/security+intl-icu.es.xlf
+++ b/translations/security+intl-icu.es.xlf
@@ -154,7 +154,7 @@
         <target>Enlace de inicio de sesión inválido o expirado.</target>
       </segment>
     </unit>
-    <unit id="9qGC3hG" name="Too many failed login attempts, please try again in {minutes} minute.">
+    <unit id="rzOAb51" name="Too many failed login attempts, please try again in {minutes} minute.">
       <notes>
         <note category="german">Zu viele fehlgeschlagene Anmeldeversuche, bitte versuchen Sie es in einer Minute noch einmal.</note>
       </notes>
@@ -163,7 +163,7 @@
         <target>Demasiados intentos fallidos de inicio de sesión, inténtelo de nuevo en {minutes} minuto.</target>
       </segment>
     </unit>
-    <unit id="AJR3lMs" name="Too many failed login attempts, please try again in {minutes} minutes.">
+    <unit id="H7z6JkT" name="Too many failed login attempts, please try again in {minutes} minutes.">
       <notes>
         <note category="german">Zu viele fehlgeschlagene Anmeldeversuche, bitte versuchen Sie es in {minutes} Minuten noch einmal.</note>
       </notes>
